Finalizado o crud usando mongodb

--- a/views/partials/_msg.handlebars
+++ b/views/partials/_msg.handlebars
@@ -1,5 +1,5 @@
-{{#if success-msg}}
-    <div class="alert alert-success">{{success-msg}}</div>
+{{#if success_msg}}
+    <div class="alert alert-success">{{success_msg}}</div>
 
 {{/if}}
 
