--- a/views/admin/categorias.handlebars
+++ b/views/admin/categorias.handlebars
@@ -2,3 +2,21 @@
 <hr>
 
 <a href="/admin/categorias/add"><button class="btn btn-success">Adcionar Categoria</button></a>
+
+{{#each categorias}}
+    <div class="card mt-4">
+        <div class="card-body">
+            <h4>{{nome}}</h4>
+            <small>Slug: {{slug}}</small><br>
+            <small>{{data}}</small><br>
+            <a href="/admin/categorias/edite/{{id}}"><button class="btn btn-success mt-4">Editar</button></a>
+            <form action="/admin/categorias/deletar" method="POST">
+                <input type="hidden" name="id" value="{{_id}}">
+                <button type="submit" class="btn btn-danger mt-2">Deletar Categoria</button>
+            </form>
+        </div>
+    </div>
+
+{{else}}
+    <h4>Nenhuma categoria registrada</h4>
+{{/each}}
